// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DropdownMenuButton matches Snapshot (defaultOpen) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c2[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  list-style-type: none;
  position: absolute;
  width: 100%;
  z-index: 700;
}

.c0 {
  position: relative;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c4 {
  margin-left: var(--spacing-1x);
}

.c7 {
  left: 0px;
  max-width: 350px;
  min-width: 200px;
  position: absolute;
  top: 0px;
  width: auto;
  z-index: 99998;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c14:hover {
  color: #003A5A;
}

.c14:visited {
  color: #006296;
}

.c14:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #8FCEF0;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c20:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c19 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c18 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c15 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c15:visited svg {
  color: #006296;
}

.c17 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c16 {
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c16:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c16:hover {
  background-color: #DBDEE1;
}

.c16:visited {
  color: #006296;
  fill: #006296;
}

.c16:visited svg {
  color: #006296;
  fill: #006296;
}

.c16[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c8 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c8:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c12 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c9:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c9:hover {
  background-color: #DBDEE1;
}

.c9[disabled],
.c9[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c13:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c13:hover {
  background-color: transparent;
}

.c13[disabled],
.c13[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c5 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

<body>
  <div>
    <div
      aria-label=""
      class="c0"
      data-testid="dropdown-container"
      id="uuid1"
    >
      <button
        aria-expanded="true"
        class="c1 c2 c3 eds-DropdownMenuButton-button"
        data-testid="menu-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c4"
          color="currentColor"
          focusable="false"
          height="16"
          icon-name="chevron-up"
          width="16"
        />
      </button>
    </div>
  </div>
  <div
    class="c5"
    data-testid="toasts"
  />
  <div
    class="c6 c7"
    data-testid="menu-dropdownMenu"
    id="uuid2"
  >
    <ul
      aria-labelledby="firstGroup"
      class="c8"
    >
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionA"
          href="/testA"
          tabindex="0"
        >
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                optionA
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionB"
          href="/testB"
          tabindex="0"
        >
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                optionB
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionC"
          href="/testC"
          tabindex="0"
        >
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                optionC
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c13"
          data-testid="listitem-optionD"
          disabled=""
          href="/testD"
          tabindex="-1"
        >
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                optionD
              </span>
            </div>
          </div>
        </a>
      </li>
    </ul>
    <ul
      aria-labelledby="secondGroup"
      class="c8"
    >
      <li>
        <a
          aria-disabled="false"
          class="c14 c15 c16"
          href="https://external-link.com/a"
          target="_blank"
        >
          <span
            class="c17"
          >
            ExternalA
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c18"
            color="currentColor"
            focusable="false"
            height="16"
            icon-name="external-link"
            role="img"
            width="16"
          />
          <span
            class="c19"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c14 c15 c16"
          href="https://external-link.com/b"
          target="_blank"
        >
          <span
            class="c17"
          >
            ExternalB
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c18"
            color="currentColor"
            focusable="false"
            height="16"
            icon-name="external-link"
            role="img"
            width="16"
          />
          <span
            class="c19"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c14 c15 c16"
          href="https://external-link.com/c"
          target="_blank"
        >
          <span
            class="c17"
          >
            ExternalC
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c18"
            color="currentColor"
            focusable="false"
            height="16"
            icon-name="external-link"
            role="img"
            width="16"
          />
          <span
            class="c19"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c20 c15 c16"
          disabled=""
          target="_blank"
        >
          <span
            class="c17"
          >
            ExternalD
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c18"
            color="currentColor"
            focusable="false"
            height="16"
            icon-name="external-link"
            role="img"
            width="16"
          />
          <span
            class="c19"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</body>
`;

exports[`DropdownMenuButton matches Snapshot 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c2[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c6 {
  background-color: #FFFFFF;
  border: 1px solid #878F9A;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.2);
  color: #1B1C1E;
  list-style-type: none;
  position: absolute;
  width: 100%;
  z-index: 700;
}

.c0 {
  position: relative;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c4 {
  margin-left: var(--spacing-1x);
}

.c7 {
  left: 0px;
  max-width: 350px;
  min-width: 200px;
  position: absolute;
  top: 4px;
  width: auto;
  z-index: 99998;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c14:hover {
  color: #003A5A;
}

.c14:visited {
  color: #006296;
}

.c14:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #8FCEF0;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c20:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c19 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c18 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c15 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c15:visited svg {
  color: #006296;
}

.c17 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c16 {
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c16:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c16:hover {
  background-color: #DBDEE1;
}

.c16:visited {
  color: #006296;
  fill: #006296;
}

.c16:visited svg {
  color: #006296;
  fill: #006296;
}

.c16[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c8 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c8:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c12 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c9:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c9:hover {
  background-color: #DBDEE1;
}

.c9[disabled],
.c9[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c13:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c13:hover {
  background-color: transparent;
}

.c13[disabled],
.c13[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c5 {
  box-sizing: border-box;
  position: fixed;
  z-index: 100000;
  bottom: var(--spacing-2x);
  right: var(--spacing-2x);
}

<body>
  <div>
    <div
      aria-label=""
      class="c0"
      data-testid="dropdown-container"
      id="uuid1"
    >
      <button
        aria-expanded="true"
        class="c1 c2 c3 eds-DropdownMenuButton-button"
        data-testid="menu-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c4"
          color="currentColor"
          focusable="false"
          height="16"
          icon-name="chevron-up"
          width="16"
        />
      </button>
    </div>
  </div>
  <div
    class="c5"
    data-testid="toasts"
  />
  <div
    class="c6 c7"
    data-testid="menu-dropdownMenu"
    id="uuid2"
    style="width: 0px;"
  >
    <ul
      aria-labelledby="firstGroup"
      class="c8"
    >
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionA"
          href="/testA"
          tabindex="0"
        >
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                optionA
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionB"
          href="/testB"
          tabindex="0"
        >
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                optionB
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c9"
          data-testid="listitem-optionC"
          href="/testC"
          tabindex="0"
        >
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                optionC
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c13"
          data-testid="listitem-optionD"
          disabled=""
          href="/testD"
          tabindex="-1"
        >
          <div
            class="c10"
          >
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                optionD
              </span>
            </div>
          </div>
        </a>
      </li>
    </ul>
    <ul
      aria-labelledby="secondGroup"
      class="c8"
    >
      <li>
        <a
          aria-disabled="false"
          class="c14 c15 c16"
          href="https://external-link.com/a"
          target="_blank"
        >
          <span
            class="c17"
          >
            ExternalA
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c18"
            color="currentColor"
            focusable="false"
            height="16"
            icon-name="external-link"
            role="img"
            width="16"
          />
          <span
            class="c19"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c14 c15 c16"
          href="https://external-link.com/b"
          target="_blank"
        >
          <span
            class="c17"
          >
            ExternalB
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c18"
            color="currentColor"
            focusable="false"
            height="16"
            icon-name="external-link"
            role="img"
            width="16"
          />
          <span
            class="c19"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c14 c15 c16"
          href="https://external-link.com/c"
          target="_blank"
        >
          <span
            class="c17"
          >
            ExternalC
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c18"
            color="currentColor"
            focusable="false"
            height="16"
            icon-name="external-link"
            role="img"
            width="16"
          />
          <span
            class="c19"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c20 c15 c16"
          disabled=""
          target="_blank"
        >
          <span
            class="c17"
          >
            ExternalD
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c18"
            color="currentColor"
            focusable="false"
            height="16"
            icon-name="external-link"
            role="img"
            width="16"
          />
          <span
            class="c19"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</body>
`;
